- Bugfix in ghost powers.

25/12/2001 (Jir)
# Unstable, bug-filled, far-from-fully-implemented version!!
# Bugfixes and implementations urgently needed.
  - New ego-item system, which is a mixture of PernA-ego and PernM-randarts.
    (ego-items will use random-seeds[name3] just like randarts.)
  - Item flags are now compatible with PernA [tho many of them are not in yet.]
  - k_idx is automatically calculated from tval and sval.
  - bunch of new items/artifacts/ego-items ported from PernAngband.
- 3 more traps(Silliness/Goodbye-Charlie/Present-Exchange).

26/12/2001 (Jir)
- Item activations for some of new items are implemented.
- Added a hack to make insta-killing traps appear in deeper levels.
- Thrown randarts never break.
- "Drop 1au to get Great Scimitar" bug fixed.
- Different kind of "gold" when dropping money.
- "Torch of infravision (+2500 to infravision)" bug is fixed.
- "Leather Jacket/Sickle" bug fixed.
- Exploding ammos/boomerangs/Ricochet
- Ammo inscribed {!g} never drops(=never litter the floor).
- Other bugfixes.

27/12/2001 (Jir)
** [C] stands for Client changes.
- Sector info on '@'.
- Some small scripts.
- Chatline commands: /bed, /dress, /quaff
- pval/bpval bug is fixed(but still needing ameliorations).
[C] Random attribute-picker.
- Some of ported items are implemented(cmd6.c).
- Poison branding.
- added some articles on self-knowledge.
- Nazgul powers are ported (except Black-Breath).

28/12/2001 (Jir)
# MORE Unstable, bug-filled, far-from-fully-implemented version!!
# Bugfixes and implementations URGENTLY needed. (almost not tested at all)
  - PernAngband monster system is ported.
  - replaced 550 mangband monsters with 1042 PernA monsters.
  - Generation flags are not used for now(eg. Shark in dungeon, pfft)
  - Most of new flags are not implemented yet.
- Black-Breath is implemented.
- Specific ESP (eg. slay-orc weapon gives orc-only ESP)
- Fixed a bug that allowed to generate breeders on the wilderness.
