@@ -314,7 +314,8 @@ T:32:8:99
 T:33:0:99
 R:100
 F:SEARCH | RES_BLIND | SEE_INVIS
-R:20
+#R:20
+R:1
 F:ESP_ALL
 
 N:31:of Infravision
@@ -336,7 +337,8 @@ F:LITE1 | RES_LITE
 
 N:33:of Telepathy
 X:A:33:20
-W:0:1:8:50000
+#W:0:1:8:50000
+W:0:1:50:150000
 T:33:0:99
 R:100
 F:ESP_ALL
@@ -1877,7 +1879,7 @@ T:35:0:255
 X:A:31:10
 #X:31:20
 #W:0:0:0:250000
-W:60:1:36:250000
+W:60:1:18:250000
 C:0:0:20:0
 R:100
 F:RES_ACID | RES_ELEC | RES_FIRE | RES_COLD | ACTIVATE
@@ -1897,6 +1899,55 @@ W:0:3:27:20000
 C:0:0:10:0
 R:100
 F:HOLD_LIFE | FREE_ACT
+
+N:182:of Mirkwood
+X:A:35:20
+W:0:3:15:15000
+C:0:0:0:0
+T:30:0:99
+R:100
+F:FREE_ACT | RES_POIS
+
+N:183:of Numenor
+T:19:0:255
+X:A:25:20
+W:0:4:21:50000
+C:10:10:0:0
+R:100
+F:REGEN | XTRA_MIGHT
+
+N:184:of the Avari
+X:A:32:20
+T:34:0:5
+T:34:7:255
+W:0:2:22:80000
+C:0:0:15:2
+R:100
+F:RES_ACID | RES_ELEC | RES_FIRE | RES_COLD | CON
+F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+
+N:184:of the Istari
+X:A:34:20
+#T:31:1:1
+T:31:0:99
+W:0:1:10:50000
+C:-5:-5:10:3
+R:100
+F:INT | WIS | FREE_ACT
+F:SHOW_MODS | HIDE_TYPE
+F:OLD_RESIST
+
+N:185:of the Magi
+X:A:34:20
+T:31:0:99
+#T:31:1:1
+W:0:1:10:50000
+C:-5:-5:10:10
+R:100
+F:MANA | FREE_ACT
+F:SHOW_MODS | HIDE_TYPE
+F:ABILITY
+
 
 
 #N:(No.):(name)
