@@ -3430,8 +3430,9 @@ F:RES_NEXUS | RES_POIS
 N:474:ESP
 G:":d
 I:40:22:0
-W:50:0:3:25000
-A:50/6
+#W:50:0:3:25000
+W:50:0:3:100000
+A:50/30
 F:ESP_ALL | 
 F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 
